Backend: Removed double span element from HTML buttons

--- a/app/design/adminhtml/default/default/template/api/users.phtml
+++ b/app/design/adminhtml/default/default/template/api/users.phtml
@@ -15,7 +15,7 @@
     <tr>
         <td style="width:50%;"><h3><?= $this->__('Users') ?></h3></td>
         <td class="a-right">
-        <button class="scalable add" onclick="window.location='<?= $this->getAddNewUrl() ?>'"><span><span><span><?= $this->__('Add New User') ?></span></span></span></button>
+        <button class="scalable add" onclick="window.location='<?= $this->getAddNewUrl() ?>'"><span><?= $this->__('Add New User') ?></span></button>
         </td>
     </tr>
 </table>
