--- a/app/design/adminhtml/default/default/template/currencysymbol/grid.phtml
+++ b/app/design/adminhtml/default/default/template/currencysymbol/grid.phtml
@@ -39,8 +39,8 @@
                         </colgroup>
                         <thead>
                             <tr class="headings">
-                                <th><span class="nobr"><span class="not-sort"><?= $this->__('Currency') ?></span></span></th>
-                                <th><span class="nobr"><span class="not-sort"><?= $this->__('Symbol') ?><span class="required"><em>*</em></span></span></span></th>
+                                <th><span class="nobr"><span class="not-sort"><?= $this->__('Currency') ?></th>
+                                <th><span class="nobr"><span class="not-sort"><?= $this->__('Symbol') ?><span class="required"><em>*</em></span></th>
                             </tr>
                         </thead>
                         <tbody>
