--- a/app/design/adminhtml/default/default/template/dashboard/salebar.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/salebar.phtml
@@ -17,7 +17,7 @@
             <div class="entry-edit">
                 <div class="entry-edit-head"><h4><?= $_total['label'] ?></h4></div>
                 <fieldset class="a-center bold">
-                    <span class="nowrap" style="font-size:18px;"><?= $_total['value'] ?><span style="font-size:14px; color:#686868;"><?= $_total['decimals'] ?></span></span>
+                    <span class="nowrap" style="font-size:18px;"><?= $_total['value'] ?><span style="font-size:14px; color:#686868;"><?= $_total['decimals'] ?>
                 </fieldset>
             </div>
             <?php endforeach ?>
