--- a/app/design/adminhtml/default/default/template/downloadable/product/edit/downloadable/links.phtml
+++ b/app/design/adminhtml/default/default/template/downloadable/product/edit/downloadable/links.phtml
@@ -166,7 +166,7 @@ var linkTemplate = '<tr id="downloadable_link_{{id}}">'+
     '</td>'+
     '<td class="a-center"><input type="text" name="downloadable[link][{{id}}][sort_order]" value="{{sort_order}}" class="input-text sort" /></td>'+
     '<td>'+
-    '<button id="downloadable_link_{{id}}_delete_button" type="button" class="scalable delete icon-btn delete-link-item"><span><span><span><?= $this->jsQuoteEscape(Mage::helper('downloadable')->__('Delete')) ?></span></span></span></button>'+
+    '<button id="downloadable_link_{{id}}_delete_button" type="button" class="scalable delete icon-btn delete-link-item"><span><?= $this->jsQuoteEscape(Mage::helper('downloadable')->__('Delete')) ?></span></button>'+
     '</td>'+
 '</tr>';
 
