--- a/app/design/adminhtml/default/default/template/downloadable/product/edit/downloadable/samples.phtml
+++ b/app/design/adminhtml/default/default/template/downloadable/product/edit/downloadable/samples.phtml
@@ -93,7 +93,7 @@ var sampleTemplate = '<tr id="downloadable_sample_{{id}}">'+
                         '</td>'+
                         '<td class="a-center"><input type="text" name="downloadable[sample][{{id}}][sort_order]" value="{{sort_order}}" class="input-text sort" /></td>'+
                         '<td>'+
-                            '<button type="button" class="scalable delete icon-btn delete-sample-item"><span><span><span>Delete</span></span></span></button>'+
+                            '<button type="button" class="scalable delete icon-btn delete-sample-item"><span>Delete</span></button>'+
                         '</td>'+
                     '</tr>';
 var sampleItems = {
