--- a/app/design/adminhtml/default/default/template/giftmessage/popup.phtml
+++ b/app/design/adminhtml/default/default/template/giftmessage/popup.phtml
@@ -23,8 +23,8 @@
                 <?= $this->getChildHtml() ?>
             </div>
             <div class="buttons-set a-right">
-                <button type="button" class="scalable" id="gift_options_cancel_button"><span><span><span><?= Mage::helper('giftmessage')->__('Cancel') ?></span></span></span></button>
-                <button type="button" class="scalable" id="gift_options_ok_button"><span><span><span><?= Mage::helper('giftmessage')->__('OK') ?></span></span></span></button>
+                <button type="button" class="scalable" id="gift_options_cancel_button"><span><?= Mage::helper('giftmessage')->__('Cancel') ?></span></button>
+                <button type="button" class="scalable" id="gift_options_ok_button"><span><?= Mage::helper('giftmessage')->__('OK') ?></span></button>
             </div>
         </div>
     </div>
