--- a/app/design/adminhtml/default/default/template/importexport/export/form/after.phtml
+++ b/app/design/adminhtml/default/default/template/importexport/export/form/after.phtml
@@ -19,7 +19,7 @@
         <div id="export_filter_grid_container" class="fieldset"><!-- --></div>
     </form>
     <div class="a-right">
-        <button class="scalable" type="button" onclick="getFile();"><span><span><span><?= $this->__('Continue') ?></span></span></span></button>
+        <button class="scalable" type="button" onclick="getFile();"><span><?= $this->__('Continue') ?></span></button>
     </div>
 </div>
 <script type="text/javascript">
