--- a/app/design/adminhtml/default/default/template/oauth/authorize/button-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/button-simple.phtml
@@ -34,12 +34,12 @@ $logo = $this->getSkinUrl('images/logo-large.gif', ['_area' => 'adminhtml', '_pa
                     <form id="oauth_authorize_confirm" action="<?= $this->getConfirmUrl() ?>" method="get">
                         <input type="hidden" name="oauth_token" value="<?= $this->escapeHtml($this->getToken()) ?>">
                         <button type="submit" class="button" title="<?= $this->quoteEscape($this->__('Authorize')) ?>">
-                            <span><span><?= $this->__('Authorize') ?></span></span></button>
+                            <?= $this->__('Authorize') ?></button>
                     </form>
                     <form id="oauth_authorize_reject" action="<?= $this->getRejectUrl() ?>" method="get">
                         <input type="hidden" name="oauth_token" value="<?= $this->escapeHtml($this->getToken()) ?>">
                         <button type="submit" class="button" title="<?= $this->quoteEscape($this->__('Reject')) ?>">
-                            <span><span><?= $this->__('Reject') ?></span></span></button>
+                            <?= $this->__('Reject') ?></button>
                     </form>
                 <?php endif ?>
             </div>
