--- a/app/design/adminhtml/default/default/template/oauth/authorize/confirm-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/confirm-simple.phtml
@@ -31,7 +31,7 @@
             <button type="submit" class="button"
                     onclick="window.close();"
                     title="<?= $this->quoteEscape($this->__('Close')) ?>">
-                <span><span><?= $this->__('Close') ?></span></span>
+                <?= $this->__('Close') ?>
             </button>
         </div>
     </div>
