--- a/app/design/adminhtml/default/default/template/oauth/authorize/reject-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/reject-simple.phtml
@@ -26,7 +26,7 @@
                 <?= $this->getMessagesBlock()->toHtml() ?>
             </div>
             <button type="submit" class="button" onclick="window.close();" title="<?= $this->quoteEscape($this->__('Close')) ?>">
-                <span><span><?= $this->__('Close') ?></span></span>
+                <?= $this->__('Close') ?>
             </button>
         </div>
     </div>
