--- a/app/design/adminhtml/default/default/template/permissions/roles.phtml
+++ b/app/design/adminhtml/default/default/template/permissions/roles.phtml
@@ -17,8 +17,8 @@
         <tr>
             <td style="width:50%;"><h3><?= $this->__('Roles') ?></h3></td>
             <td class="form-buttons">
-            <button class="scalable" onclick="window.location='<?= $this->getRefreshRolesUrl() ?>'"><span><span><span><?= $this->__('Refresh Roles') ?></span></span></span></button>
-            <button class="scalable add" onclick="window.location='<?= $this->getAddNewUrl() ?>'"><span><span><span><?= $this->__('Add New Role') ?></span></span></span></button>
+            <button class="scalable" onclick="window.location='<?= $this->getRefreshRolesUrl() ?>'"><span><?= $this->__('Refresh Roles') ?></span></button>
+            <button class="scalable add" onclick="window.location='<?= $this->getAddNewUrl() ?>'"><span><?= $this->__('Add New Role') ?></span></button>
             </td>
         </tr>
     </table>
