--- a/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/packed.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/packed.phtml
@@ -178,7 +178,7 @@
         <div class="buttons-set a-right">
             <?= $this->getPrintButton() ?>
             <button type="button" class="scalable SavePackagesBtn save" onclick="hidePackedWindow();" title="<?= Mage::helper('sales')->__('Products should be added to package(s)') ?>">
-                <span><span><span><?= Mage::helper('sales')->__('OK') ?></span></span></span>
+                <span><?= Mage::helper('sales')->__('OK') ?></span>
             </button>
         </div>
     </div>
