--- a/app/design/adminhtml/default/default/template/system/config/system/storage/media/synchronize.phtml
+++ b/app/design/adminhtml/default/default/template/system/config/system/storage/media/synchronize.phtml
@@ -180,5 +180,5 @@
 //]]>
 </script>
 
-<?= $this->getButtonHtml() ?><span class="sync-indicator no-display" id="sync_span"><img alt="Synchronize" style="margin:0 5px" src="<?= $this->getSkinUrl('images/process_spinner.gif') ?>"/><span id="sync_message_span"></span></span>
+<?= $this->getButtonHtml() ?><span class="sync-indicator no-display" id="sync_span"><img alt="Synchronize" style="margin:0 5px" src="<?= $this->getSkinUrl('images/process_spinner.gif') ?>"/><span id="sync_message_span">
 <input type="hidden" id="synchronize-validation-input" class="required-synchronize no-display"/>
