--- a/app/design/adminhtml/default/default/template/tax/toolbar/class/add.phtml
+++ b/app/design/adminhtml/default/default/template/tax/toolbar/class/add.phtml
@@ -15,7 +15,7 @@
         <tr>
             <td style="width:50%;"><h3><?= $header ?></h3></td>
             <td class="form-buttons">
-                <button class="scalable add" onclick="window.location.href='<?= $createUrl ?>'"><span><span><span><?= Mage::helper('tax')->__('Add New Class') ?></span></span></span></button>
+                <button class="scalable add" onclick="window.location.href='<?= $createUrl ?>'"><span><?= Mage::helper('tax')->__('Add New Class') ?></span></button>
             </td>
         </tr>
     </table>
