--- a/app/design/adminhtml/default/default/template/weee/renderer/tax.phtml
+++ b/app/design/adminhtml/default/default/template/weee/renderer/tax.phtml
@@ -55,7 +55,7 @@
                 </td>
                 <td class="last">
                     <input type="hidden" name="<?= $_htmlName ?>[__index__][delete]" class="delete" disabled="no-template" value=""  id="#{prefix}_weee_tax_row___index___delete" />
-                    <button title="Delete WEEE Tax" class="scalable delete icon-btn delete-product-option" onclick="weeeTaxControl.deleteItem('<?= $_htmlId ?>', event);return false"><span><span><span>Delete</span></span></span></button>
+                    <button title="Delete WEEE Tax" class="scalable delete icon-btn delete-product-option" onclick="weeeTaxControl.deleteItem('<?= $_htmlId ?>', event);return false"><span>Delete</span></button>
                 </td>
             </tr>
         </thead>
