--- a/app/design/adminhtml/default/default/template/catalog/product/composite/configure.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/composite/configure.phtml
@@ -26,8 +26,8 @@
             <div id="product_composite_configure_form_additional" style="display:none;"></div>
             <div id="product_composite_configure_form_confirmed" style="display:none;"></div>
             <div class="buttons-set a-right">
-                <button type="button" class="scalable" onclick="productConfigure.onCancelBtn()" id="product_composite_configure_form_cancel"><span><span><span><?= Mage::helper('catalog')->__('Cancel') ?></span></span></span></button>
-                <button type="submit" class="scalable"><span><span><span><?= Mage::helper('catalog')->__('OK') ?></span></span></span></button>
+                <button type="button" class="scalable" onclick="productConfigure.onCancelBtn()" id="product_composite_configure_form_cancel"><span><?= Mage::helper('catalog')->__('Cancel') ?></span></button>
+                <button type="submit" class="scalable"><span><?= Mage::helper('catalog')->__('OK') ?></span></button>
             </div>
         </div>
         <input type="hidden" name="as_js_varname" value="iFrameResponse" />
