--- a/app/design/adminhtml/default/default/template/dashboard/totalbar.phtml
+++ b/app/design/adminhtml/default/default/template/dashboard/totalbar.phtml
@@ -20,7 +20,7 @@
             <?php foreach( $this->getTotals() as $_total ): ?>
                 <td class="a-center bold">
                     <span><?= $_total['label'] ?></span><br />
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;"><?= $_total['value'] ?><span style="font-size:14px; color:#DE8946;"><?= $_total['decimals'] ?></span></span>
+                    <span class="nowrap" style="font-size:18px; color:#EA7601;"><?= $_total['value'] ?><span style="font-size:14px; color:#DE8946;"><?= $_total['decimals'] ?>
                 </td>
             <?php endforeach ?>
             </tr>
