--- a/app/design/adminhtml/default/default/template/newsletter/preview/iframeswitcher.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/preview/iframeswitcher.phtml
@@ -26,7 +26,7 @@
         <?php if (!Mage::app()->isSingleStoreMode()) :?>
         <p class="switcher">
             <?= $this->getChildHtml('store_switcher') ?>
-            <button class="button" onclick="preview();"><span><span><span><?= $this->__('Preview') ?></span></span></span></button>
+            <button class="button" onclick="preview();"><span><?= $this->__('Preview') ?></span></button>
         </p>
         <?php endif ?>
     </div>
