--- a/app/design/adminhtml/default/default/template/newsletter/subscriber/list.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/subscriber/list.phtml
@@ -29,7 +29,7 @@
         <option value="<?= $_queue['value'] ?>"><?= $_queue['label'] ?> #<?= $_queue['value'] ?></option>
     <?php endforeach ?>
     </select>
-    <button class="scalable" onclick="subscriberController.addToQueue();"><span><span><span><?= Mage::helper('newsletter')->__('Add to Queue') ?></span></span></span></button>
+    <button class="scalable" onclick="subscriberController.addToQueue();"><span><?= Mage::helper('newsletter')->__('Add to Queue') ?></span></button>
 </div>
 <?php endif ?>
 <script type="text/javascript">
