--- a/app/design/adminhtml/default/default/template/newsletter/template/list.phtml
+++ b/app/design/adminhtml/default/default/template/newsletter/template/list.phtml
@@ -17,7 +17,7 @@
         <tr>
             <td style="width:50%;"><h3><?= $this->getHeaderText() ?></h3></td>
             <td class="form-buttons">
-                <button class="scalable add" onclick="window.location='<?= $this->getCreateUrl() ?>'"><span><span><span><?= Mage::helper('newsletter')->__('Add New Template') ?></span></span></span></button>
+                <button class="scalable add" onclick="window.location='<?= $this->getCreateUrl() ?>'"><span><?= Mage::helper('newsletter')->__('Add New Template') ?></span></button>
             </td>
         </tr>
     </table>
