--- a/app/design/adminhtml/default/default/template/paypal/system/config/api_wizard.phtml
+++ b/app/design/adminhtml/default/default/template/paypal/system/config/api_wizard.phtml
@@ -14,9 +14,9 @@
 ?>
 <div class="pp-buttons-container">
     <button onclick="javascript:window.open('<?= $this->getButtonUrl()?>', 'apiwizard','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, ,left=100, top=100, width=380, height=470'); return false;" class="scalable" type="button" id="<?= $this->getHtmlId() ?>">
-        <span><span><span><?= $this->escapeHtml($this->getButtonLabel()) ?></span></span></span>
+        <span><?= $this->escapeHtml($this->getButtonLabel()) ?></span>
     </button>
     <button onclick="javascript:window.open('<?= $this->getSandboxButtonUrl()?>', 'apiwizard','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, ,left=100, top=100, width=380, height=470'); return false;" class="scalable" type="button" id="<?= $this->getSandboxHtmlId() ?>">
-        <span><span><span><?= $this->escapeHtml($this->getSandboxButtonLabel()) ?></span></span></span>
+        <span><?= $this->escapeHtml($this->getSandboxButtonLabel()) ?></span>
     </button>
 </div>
