--- a/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/grid.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/grid.phtml
@@ -67,7 +67,7 @@
                             <input type="hidden" name="price" value="<?= $item->getPrice() ?>">
                             <input type="text" name="qty" value="<?= $item->getQty()*1 ?>" class="input-text qty<?php if ($item->getOrderItem()->getIsQtyDecimal()): ?> qty-decimal<?php endif ?>">&nbsp;
                             <button type="button" class="scalable delete icon-btn" onclick="packaging.deleteItem(this);" style="display:none;">
-                                <span><span><span><?= Mage::helper('sales')->__('Delete') ?></span></span></span>
+                                <span><?= Mage::helper('sales')->__('Delete') ?></span>
                             </button>
                         </td>
                     </tr>
