--- a/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/popup.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/shipment/packaging/popup.phtml
@@ -34,7 +34,7 @@ document.observe("dom:loaded", function() {
     <div class="entry-edit">
         <div class="entry-edit-head">
             <button type="button" class="scalable AddPackageBtn" onclick="packaging.newPackage();">
-                <span><span><span><?= Mage::helper('sales')->__('Add Package') ?></span></span></span>
+                <span><?= Mage::helper('sales')->__('Add Package') ?></span>
             </button>
             <h4 class="icon-head fieldset-legend"><?= Mage::helper('sales')->__('Create Packages') ?></h4>
         </div>
@@ -144,12 +144,12 @@ document.observe("dom:loaded", function() {
                         <?php endif ?>
                         <td>
                             <button type="button" class="scalable AddItemsBtn" onclick="packaging.getItemsForPack(this);">
-                                <span><span><span><?= Mage::helper('sales')->__('Add Products') ?></span></span></span>
+                                <span><?= Mage::helper('sales')->__('Add Products') ?></span>
                             </button>
                         </td>
                         <td>
                             <button type="button" class="scalable DeletePackageBtn" onclick="packaging.deletePackage(this);">
-                                <span><span><span><?= Mage::helper('sales')->__('Delete Package') ?></span></span></span>
+                                <span><?= Mage::helper('sales')->__('Delete Package') ?></span>
                             </button>
                         </td>
                     </tbody>
@@ -186,7 +186,7 @@ document.observe("dom:loaded", function() {
                     <div class="package_prapare" style="display:none">
                         <div class="entry-edit-head">
                             <button type="button" class="scalable AddSelectedBtn" onclick="packaging.packItems(this);">
-                                <span><span><span><?= Mage::helper('sales')->__('Add Selected Product(s) to Package') ?></span></span></span>
+                                <span><?= Mage::helper('sales')->__('Add Selected Product(s) to Package') ?></span>
                             </button>
                             <h4><?= Mage::helper('sales')->__('Please Select Products to Add') ?></h4>
                         </div>
@@ -198,10 +198,10 @@ document.observe("dom:loaded", function() {
         </div>
         <div class="buttons-set a-right">
             <button type="button" class="scalable disabled SavePackagesBtn" disabled="disabled" onclick="packaging.confirmPackaging();" title="<?= Mage::helper('sales')->__('Products should be added to package(s)') ?>">
-                <span><span><span><?= Mage::helper('sales')->__('OK') ?></span></span></span>
+                <span><?= Mage::helper('sales')->__('OK') ?></span>
             </button>
             <button type="button" class="scalable" onclick="packaging.cancelPackaging();">
-                <span><span><span><?= Mage::helper('sales')->__('Cancel') ?></span></span></span>
+                <span><?= Mage::helper('sales')->__('Cancel') ?></span>
             </button>
         </div>
     </div>
