--- a/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/billing.phtml
@@ -218,12 +218,10 @@
             const billingRememberMe = billingForm.querySelectorAll('.remember-me-box');
 
             if (billingRememberMe.length > 0) {
-                const loginGuest = document.getElementById('login:guest');
-                const loginRegister = document.getElementById('login:register');
-
-                if (loginGuest && loginGuest.checked) {
+                const method = document.querySelector('input[name=checkout_method]')?.value;
+                if (method === 'guest') {
                     billingRememberMe[0].style.display = 'none';
-                } else if (loginRegister && (loginRegister.checked || loginRegister.type == 'hidden')) {
+                } else if (method === 'register') {
                     billingRememberMe[0].style.display = 'block';
                 }
             }
